unpackaged/main/default/objects/User_Availability__c/User_Availability__c.object-meta.xml
<CustomObject>
    <description>US-0009691 - [Pro-Trader] Capability for Advisors to book available slots weekly</description>
    <label>User Availability</label>
    <nameField>
        <displayFormat>UA-{0000000}</displayFormat>
        <label>User Availability</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Availability</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>