unpackaged/main/default/objects/User_Availability__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>US-0009691 - [Pro-Trader] Capability for Advisors to book available slots weekly</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>