unpackaged/main/default/objects/User_Availability__c/fields/Scheduled_Calls_Morning_Slot__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Calls_Morning_Slot__c</fullName>
    <description>US-0009691 - [Pro-Trader] Capability for Advisors to book available slots weekly</description>
    <label>Scheduled Calls Morning Slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>