unpackaged/main/default/objects/User_Availability__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>US-0009691 - [Pro-Trader] Capability for Advisors to book available slots weekly</description>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>