unpackaged/main/default/objects/User_Availability__c/listViews/Diogo_Availability.listView-meta.xml
<ListView>
    <fullName>Diogo_Availability</fullName>
    <columns>NAME</columns>
    <columns>Available_Calls_Afternoon_Slot__c</columns>
    <columns>Available_Calls_Morning_Slot__c</columns>
    <columns>Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Scheduled_Calls_Afternoon_Slot__c</columns>
    <columns>Scheduled_Calls_Morning_Slot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Diogo</value>
    </filters>
    <label>Diogo Availability</label>
</ListView>