unpackaged/main/default/objects/User_Availability__c/listViews/Mattheas_Availability.listView-meta.xml
<ListView>
    <fullName>Mattheas_Availability</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>Available_Calls_Afternoon_Slot__c</columns>
    <columns>Available_Calls_Morning_Slot__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date__c</columns>
    <columns>Scheduled_Calls_Afternoon_Slot__c</columns>
    <columns>Scheduled_Calls_Morning_Slot__c</columns>
    <columns>Unique_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Matthias</value>
    </filters>
    <label>Mattheas Availability</label>
</ListView>