unpackaged/main/default/objects/User_Availability__c/listViews/PT_DE_Availability.listView-meta.xml
<ListView>
    <fullName>PT_DE_Availability</fullName>
    <columns>Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Scheduled_Calls_Afternoon_Slot__c</columns>
    <columns>Scheduled_Calls_Morning_Slot__c</columns>
    <columns>Available_Calls_Afternoon_Slot__c</columns>
    <columns>Available_Calls_Morning_Slot__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>FMarum,JKesslin,JPritcha,KPohn,lhoep,MBekavac,MKunisch,MRosenau,mhess,OAlbrech,PZenk,PSimon,PKoulina,RZeh,RWunderl,TFaulbau</value>
    </filters>
    <label>PT DE Availability</label>
</ListView>