unpackaged/main/default/objects/User_Availability__c/listViews/PT_Italy_Availability.listView-meta.xml
<ListView>
    <fullName>PT_Italy_Availability</fullName>
    <columns>Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Scheduled_Calls_Afternoon_Slot__c</columns>
    <columns>Scheduled_Calls_Morning_Slot__c</columns>
    <columns>Available_Calls_Afternoon_Slot__c</columns>
    <columns>Available_Calls_Morning_Slot__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>DDi Paol,TCoppole,SCrapa</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2022</value>
    </filters>
    <label>PT Italy Availability</label>
</ListView>