unpackaged/main/default/objects/User_Availability__c/listViews/Steve_Broe_Availability.listView-meta.xml
<ListView>
    <fullName>Steve_Broe_Availability</fullName>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>Available_Calls_Afternoon_Slot__c</columns>
    <columns>Available_Calls_Morning_Slot__c</columns>
    <columns>Scheduled_Calls_Afternoon_Slot__c</columns>
    <columns>Scheduled_Calls_Morning_Slot__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Steve</value>
    </filters>
    <label>Steve Broe Availability</label>
</ListView>