unpackaged/main/default/objects/User_Availability__c/listViews/Tracy_Availability.listView-meta.xml
<ListView>
    <fullName>Tracy_Availability</fullName>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>Available_Calls_Afternoon_Slot__c</columns>
    <columns>Available_Calls_Morning_Slot__c</columns>
    <columns>Scheduled_Calls_Afternoon_Slot__c</columns>
    <columns>Scheduled_Calls_Morning_Slot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Kessling</value>
    </filters>
    <label>Jane Availability</label>
</ListView>